--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
 	<title>Four Column Theme</title>
 
+	<!-- Font -->	
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow|PT+Serif" rel="stylesheet">	
+
 	<!-- Loads Favicon.ico -->
 	<link rel="icon" type="image/x-icon" href="./favicon.ico">
 	<link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
@@ -20,8 +23,8 @@
 </head>
 <body>	
 
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="#">Navbar</a>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light mp-3">
+		<a class="navbar-brand" href="#">TraveLight</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -73,31 +76,218 @@
 			<form class="form-inline my-2 my-lg-0">
 				<span class="navbar-text px-3">About</span>	
 				<span class="navbar-text px-3">Contact</span>
-				<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+				<input class="form-control mr-sm-2 customEffect" type="search" placeholder="Search" aria-label="Search">
+				<!-- <button class="btn btn-outline-primary" my-2 my-sm-0" type="submit">Search</button> -->
 			</form>
-
 		</div>
 	</nav>
 
 
 	<div class="container">
-  <div class="row">
-    <div class="col-sm-4">
-      <p> 7 months ago in journey</p>
-      <div class="head1">How</div>
-      <img class="d-block w-100" src="./assets/img/img1.jpg" alt="First slide">
-    </div>
-    <div class="col-sm">
-      One of three columns
-    </div>
-    <div class="col-sm">
-      One of three columns
-    </div>
-  </div>
-</div>
+		<div class="row">
+			<div class="col-sm-3">
+				<p class="time"> 7 months ago in journey</p>
+				<div class="head1"><a class="headlink" href="#">How can we sing about love?</a></div>
+				<img class="d-block w-100" src="./assets/img/img1.jpg" alt="First Upper slide">
+				<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>		
 
+				<hr>  
 
+				<p class="time"> 8 months ago in lifestyle</p>
+				<div class="head1"><a class="headlink" href="#">Oh, I guess they have the blues?</a></div>
+				<img class="d-block w-100" src="./assets/img/img2.jpg" alt="Second slide">
+				<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+				<hr>  
+
+			</div>
+			<div class="col-sm-3">
+				<p class="time"> 11 months ago in Work </p>
+				<div class="head1"><a class="headlink" href="#">How can we, How we sing about ourselves?</a></div>
+				<img class="d-block w-100" src="./assets/img/img3.jpg" alt="Third Upper slide">
+				<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>		
+
+				<hr>  
+
+				<p class="time">11 months ago in lifestyle </p>
+				<div class="head1"><a class="headlink" href="#">The queen is made of paper</a></div>
+				<img class="d-block w-100" src="./assets/img/img1.jpg" alt="Fourth slide">
+				<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+			</div>
+			<div class="col-sm-3">
+				<p class="time">11 months ago in Work </p>
+				<div class="head1"><a class="headlink" href="#">Crying on the news</a></div>
+				<img class="d-block w-100" src="./assets/img/img2.jpg" alt="Fifth Upper slide">
+				<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>		
+
+				<hr>  
+
+				<p class="time">7 months ago in Journey</p>
+				<div class="head1"><a class="headlink" href="#">How can you not sing about love?</a></div>
+				<img class="d-block w-100" src="./assets/img/img3.jpg" alt="Sixth slide">
+				<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+			</div>
+
+			<div class="col-sm-3">
+				<p class="time"> 7 months ago in journey</p>
+				<div class="head1"><a class="headlink" href="#">How can you sing not about love?</a></div>
+				<img class="d-block w-100" src="./assets/img/img1.jpg" alt="Seventh slide">
+				<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>		
+
+				<hr>  
+
+				<p class="time"> 8 months ago in lifestyle</p>
+				<div class="head1"><a class="headlink" href="#">How can we sing about love?</a></div>
+				<img class="d-block w-100" src="./assets/img/img2.jpg" alt="Eight slide">
+				<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+			</div>
+		</div>
+	</div>
+
+	<div id="newslettersec">
+		<div class="nlSection">
+			<h5 class="card-title">Subscribe to our newsletter</h5>
+			<p class="card-text">Join our monthly newsletter and never miss out on news stories and promotions.</p>
+			<div class="row">
+				<div class="col-xs-12 col-sm-9 col-md-7 col-lg-5 ml-auto mr-auto">
+					<div class="input-group mb-3 mt-3">
+						<input type="text" class="form-control" placeholder="Email address" aria-label="Email address">
+						<span class="input-group-btn">
+							<button class="btn btn-secondary" type="button">Subscribe</button>
+						</span>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="instagram">
+			<div class="push">
+				<a class="btn btn-light" href="#">
+					Follow us @ Instagram
+				</a>
+			</div>
+			<div class="row no-gutters">
+				<div class="col-sm-6">
+					<div class="row no-gutters">
+						<div class="col-3">
+							<a class="pic" href="#">
+								<img class="pic1" src="./assets/img/img1.jpg" alt="">
+							</a>
+						</div>
+						<div class="col-3">
+							<a class="pic" href="#">
+								<img class="pic1" src="./assets/img/img2.jpg" alt="">
+							</a>
+						</div>
+						<div class="col-3">
+							<a class="pic" href="#">
+								<img class="pic1" src="./assets/img/img3.jpg" alt="">
+							</a>
+						</div>
+						<div class="col-3">
+							<a class="pic" href="#">
+								<img class="pic1" src="./assets/img/img1.jpg" alt="">
+							</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-6">
+					<div class="row no-gutters">
+						<div class="col-3">
+							<a class="pic" href="#">
+								<img class="pic1" src="./assets/img/img2.jpg" alt="">
+							</a>
+						</div>
+						<div class="col-3">
+							<a class="pic" href="#">
+								<img class="pic1" src="./assets/img/img3.jpg" alt="">
+							</a>
+						</div>
+						<div class="col-3">
+							<a class="pic" href="#">
+								<img class="pic1" src="./assets/img/img2.jpg" alt="">
+							</a>
+						</div>
+						<div class="col-3">
+							<a class="pic" href="#">
+								<img class="pic1" src="./assets/img/img1.jpg" alt="">
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<footer class="footer">
+    	<div class="container">
+			<ul class="nav justify-content-center text-white">
+        		<li class="nav-item">
+          			<a class="nav-link" href="#">Privacy policy</a>
+        		</li>
+        		<li class="nav-item">
+          			<a class="nav-link" href="#">Terms</a>
+        		</li>
+        		<li class="nav-item">
+          			<a class="nav-link" href="#">Feedback</a>
+        		</li>
+        		<li class="nav-item">
+          			<a class="nav-link" href="#">Advertise</a>
+        		</li>
+        		<li class="nav-item">
+          			<a class="nav-link" href="page-contact.html">Contact</a>
+        		</li>
+      		</ul>
+
+      		<hr>
+
+      	<div class="end text-white text-center my-3">
+        	TraveLight<br id="allrights">All rights reserved
+      </div>
+    </div>
+  </footer>	
 
 	<!-- Import Bootstrap scirpts -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
