Activity on Four Column Theme

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item-active">
-					<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item dropdown">
 					<li class="nav-item dropdown">
@@ -88,7 +88,7 @@
 			<div class="col-sm-3">
 				<p class="time"> 7 months ago in journey</p>
 				<div class="head1"><a class="headlink" href="#">How can we sing about love?</a></div>
-				<img class="d-block w-100" src="./assets/img/img1.jpg" alt="First Upper slide">
+				<img class="d-block w-100" src="./assets/img/heart.jpg" alt="First Upper slide">
 				<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -100,7 +100,7 @@
 
 				<p class="time"> 8 months ago in lifestyle</p>
 				<div class="head1"><a class="headlink" href="#">Oh, I guess they have the blues?</a></div>
-				<img class="d-block w-100" src="./assets/img/img2.jpg" alt="Second slide">
+				<img class="d-block w-100" src="./assets/img/boho.jpg" alt="Second slide">
 				<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -114,7 +114,7 @@
 			<div class="col-sm-3">
 				<p class="time"> 11 months ago in Work </p>
 				<div class="head1"><a class="headlink" href="#">How can we, How we sing about ourselves?</a></div>
-				<img class="d-block w-100" src="./assets/img/img3.jpg" alt="Third Upper slide">
+				<img class="d-block w-100" src="./assets/img/aquatico.jpg" alt="Third Upper slide">
 				<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -126,7 +126,7 @@
 
 				<p class="time">11 months ago in lifestyle </p>
 				<div class="head1"><a class="headlink" href="#">The queen is made of paper</a></div>
-				<img class="d-block w-100" src="./assets/img/img1.jpg" alt="Fourth slide">
+				<img class="d-block w-100" src="./assets/img/sun.jpg" alt="Fourth slide">
 				<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -138,7 +138,7 @@
 			<div class="col-sm-3">
 				<p class="time">11 months ago in Work </p>
 				<div class="head1"><a class="headlink" href="#">Crying on the news</a></div>
-				<img class="d-block w-100" src="./assets/img/img2.jpg" alt="Fifth Upper slide">
+				<img class="d-block w-100" src="./assets/img/beach pet friendly.jpg" alt="Fifth Upper slide">
 				<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -150,7 +150,7 @@
 
 				<p class="time">7 months ago in Journey</p>
 				<div class="head1"><a class="headlink" href="#">How can you not sing about love?</a></div>
-				<img class="d-block w-100" src="./assets/img/img3.jpg" alt="Sixth slide">
+				<img class="d-block w-100" src="./assets/img/green.jpg" alt="Sixth slide">
 				<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -163,7 +163,7 @@
 			<div class="col-sm-3">
 				<p class="time"> 7 months ago in journey</p>
 				<div class="head1"><a class="headlink" href="#">How can you sing not about love?</a></div>
-				<img class="d-block w-100" src="./assets/img/img1.jpg" alt="Seventh slide">
+				<img class="d-block w-100" src="./assets/img/South.jpg" alt="Seventh slide">
 				<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -175,7 +175,7 @@
 
 				<p class="time"> 8 months ago in lifestyle</p>
 				<div class="head1"><a class="headlink" href="#">How can we sing about love?</a></div>
-				<img class="d-block w-100" src="./assets/img/img2.jpg" alt="Eight slide">
+				<img class="d-block w-100" src="./assets/img/red.jpg" alt="Eight slide">
 				<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -213,22 +213,22 @@
 					<div class="row no-gutters">
 						<div class="col-3">
 							<a class="pic" href="#">
-								<img class="pic1" src="./assets/img/img1.jpg" alt="">
+								<img class="pic1" src="./assets/img/aquatico.jpg" alt="">
 							</a>
 						</div>
 						<div class="col-3">
 							<a class="pic" href="#">
-								<img class="pic1" src="./assets/img/img2.jpg" alt="">
+								<img class="pic1" src="./assets/img/beach pet friendly.jpg" alt="">
 							</a>
 						</div>
 						<div class="col-3">
 							<a class="pic" href="#">
-								<img class="pic1" src="./assets/img/img3.jpg" alt="">
+								<img class="pic1" src="./assets/img/beach.jpg" alt="">
 							</a>
 						</div>
 						<div class="col-3">
 							<a class="pic" href="#">
-								<img class="pic1" src="./assets/img/img1.jpg" alt="">
+								<img class="pic1" src="./assets/img/South.jpg" alt="">
 							</a>
 						</div>
 					</div>
@@ -237,22 +237,22 @@
 					<div class="row no-gutters">
 						<div class="col-3">
 							<a class="pic" href="#">
-								<img class="pic1" src="./assets/img/img2.jpg" alt="">
+								<img class="pic1" src="./assets/img/heart.jpg" alt="">
 							</a>
 						</div>
 						<div class="col-3">
 							<a class="pic" href="#">
-								<img class="pic1" src="./assets/img/img3.jpg" alt="">
+								<img class="pic1" src="./assets/img/green.jpg" alt="">
 							</a>
 						</div>
 						<div class="col-3">
 							<a class="pic" href="#">
-								<img class="pic1" src="./assets/img/img2.jpg" alt="">
+								<img class="pic1" src="./assets/img/sun.jpg" alt="">
 							</a>
 						</div>
 						<div class="col-3">
 							<a class="pic" href="#">
-								<img class="pic1" src="./assets/img/img1.jpg" alt="">
+								<img class="pic1" src="./assets/img/red.jpg" alt="">
 							</a>
 						</div>
 					</div>
@@ -282,7 +282,6 @@
       		</ul>
 
       		<hr>
-
       	<div class="end text-white text-center my-3">
         	TraveLight<br id="allrights">All rights reserved
       </div>
